Fix Slack interaction flow and local boot run